syntax = "proto3";

package tts;

import "google/protobuf/empty.proto";

service TTSService {
  rpc SynthesizeStream(stream TTSStreamRequest) returns (google.protobuf.Empty);
}

message TTSStreamRequest {
  oneof request_data {
    SynthesisConfig config = 1;
    string text_chunk = 2;
  }
}

message SynthesisConfig {
  string session_id = 1;          // TTS 서비스 내부에서 사용할 수 있는 세션 ID (선택적)
  string language_code = 2;
  string voice_name = 3;
  string frontend_session_id = 4; // ★ 새로 추가: 프론트엔드 웹소켓 세션 ID
  // string audio_encoding = 5;
  // float speaking_rate = 6;
}